{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 33,
  "lineage": "e19fe1e6-5282-7c57-0ea4-b5222a57d15d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c33c8ecf6d5d9ad2",
            "association_id": "eipassoc-07524f933d0c3e650",
            "domain": "vpc",
            "id": "eipalloc-0c33c8ecf6d5d9ad2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02b51e919aaa93053",
            "private_dns": "ip-10-0-1-17.ec2.internal",
            "private_ip": "10.0.1.17",
            "public_dns": "ec2-54-197-104-190.compute-1.amazonaws.com",
            "public_ip": "54.197.104.190",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-055f24e2797349061",
            "association_id": "eipassoc-0c4e751ff6b66d792",
            "domain": "vpc",
            "id": "eipalloc-055f24e2797349061",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0dd657dc77a750ca4",
            "private_dns": "ip-10-0-2-87.ec2.internal",
            "private_ip": "10.0.2.87",
            "public_dns": "ec2-44-193-129-38.compute-1.amazonaws.com",
            "public_ip": "44.193.129.38",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-048f6ed62451373d9",
            "arn": "arn:aws:ec2:us-east-1:231691540352:instance/i-012c3be9524cf20dd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-012c3be9524cf20dd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_vpc_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e2ef1c28c15753f4",
            "private_dns": "ip-10-0-1-78.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.78",
            "public_ip": "54.91.234.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-034a89650c0b47c55",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0460d41e381cb6819",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dddc0d6c2e960ea7"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2_key",
            "aws_security_group.ec2_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.terraform_vpc",
            "tls_private_key.public_key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-048f6ed62451373d9",
            "arn": "arn:aws:ec2:us-east-1:231691540352:instance/i-05d2fa195ff95bff7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05d2fa195ff95bff7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_vpc_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c4cfd9d720f318b5",
            "private_dns": "ip-10-0-1-203.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.203",
            "public_ip": "34.204.49.14",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-027741d9ff5ff6350",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0460d41e381cb6819",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dddc0d6c2e960ea7"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2_key",
            "aws_security_group.ec2_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.terraform_vpc",
            "tls_private_key.public_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:231691540352:internet-gateway/igw-02196ec0365184589",
            "id": "igw-02196ec0365184589",
            "owner_id": "231691540352",
            "vpc_id": "vpc-0790f77bfd6b79642"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:231691540352:loadbalancer/app/alb/225439f7bf6c69fb",
            "arn_suffix": "app/alb/225439f7bf6c69fb",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-2061558851.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:231691540352:loadbalancer/app/alb/225439f7bf6c69fb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0dddc0d6c2e960ea7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0460d41e381cb6819"
              },
              {
                "subnet_id": "subnet-0e6a73a3d0b8dbf60"
              }
            ],
            "subnets": [
              "subnet-0460d41e381cb6819",
              "subnet-0e6a73a3d0b8dbf60"
            ],
            "tags": {
              "Environment": "test"
            },
            "tags_all": {
              "Environment": "test"
            },
            "vpc_id": "vpc-0790f77bfd6b79642",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c33c8ecf6d5d9ad2",
            "association_id": "eipassoc-07524f933d0c3e650",
            "connectivity_type": "public",
            "id": "nat-08c26f22865096f64",
            "network_interface_id": "eni-02b51e919aaa93053",
            "private_ip": "10.0.1.17",
            "public_ip": "54.197.104.190",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0460d41e381cb6819"
          },
          "dependencies": [
            "aws_eip.eip_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgateway_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-055f24e2797349061",
            "association_id": "eipassoc-0c4e751ff6b66d792",
            "connectivity_type": "public",
            "id": "nat-05da281b02c4cb295",
            "network_interface_id": "eni-0dd657dc77a750ca4",
            "private_ip": "10.0.2.87",
            "public_ip": "44.193.129.38",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e6a73a3d0b8dbf60"
          },
          "dependencies": [
            "aws_eip.eip_2",
            "aws_subnet.public_subnet_2",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nategateway_route_table_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:231691540352:route-table/rtb-08894abdd2873429c",
            "id": "rtb-08894abdd2873429c",
            "owner_id": "231691540352",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08c26f22865096f64",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tagkey_name_natgateway_route_table_1"
            },
            "tags_all": {
              "Name": "tagkey_name_natgateway_route_table_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0790f77bfd6b79642"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_1",
            "aws_nat_gateway.natgateway_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nategateway_route_table_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:231691540352:route-table/rtb-05dfafd4f9247330f",
            "id": "rtb-05dfafd4f9247330f",
            "owner_id": "231691540352",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05da281b02c4cb295",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tagkey_name_natgateway_route_table_2"
            },
            "tags_all": {
              "Name": "tagkey_name_natgateway_route_table_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0790f77bfd6b79642"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_2",
            "aws_nat_gateway.natgateway_2",
            "aws_subnet.public_subnet_2",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnet_1_to_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:231691540352:route-table/rtb-03612dc8fc7f36fb3",
            "id": "rtb-03612dc8fc7f36fb3",
            "owner_id": "231691540352",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02196ec0365184589",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table_1"
            },
            "tags_all": {
              "Name": "public_route_table_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0790f77bfd6b79642"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnet_2_to_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:231691540352:route-table/rtb-05db8d65e9a48f044",
            "id": "rtb-05db8d65e9a48f044",
            "owner_id": "231691540352",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02196ec0365184589",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table_2"
            },
            "tags_all": {
              "Name": "public_route_table_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0790f77bfd6b79642"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internet_for_public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1dccbf0dc054506",
            "route_table_id": "rtb-03612dc8fc7f36fb3",
            "subnet_id": "subnet-0460d41e381cb6819"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public_subnet_1_to_internet",
            "aws_subnet.public_subnet_1",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internet_for_public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f1224e0be291b85",
            "route_table_id": "rtb-05db8d65e9a48f044",
            "subnet_id": "subnet-0e6a73a3d0b8dbf60"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public_subnet_2_to_internet",
            "aws_subnet.public_subnet_2",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1_to_natgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f98c7e2df936c35f",
            "route_table_id": "rtb-08894abdd2873429c",
            "subnet_id": "subnet-0e3b17b9212047d9f"
          },
          "dependencies": [
            "aws_eip.eip_1",
            "aws_nat_gateway.natgateway_1",
            "aws_route_table.nategateway_route_table_1",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2_to_natgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1d01e490a30b212",
            "route_table_id": "rtb-05dfafd4f9247330f",
            "subnet_id": "subnet-09553a94ef9ced596"
          },
          "dependencies": [
            "aws_eip.eip_2",
            "aws_nat_gateway.natgateway_2",
            "aws_route_table.nategateway_route_table_2",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_2",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:231691540352:security-group/sg-0dddc0d6c2e960ea7",
            "description": "security group of ec2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dddc0d6c2e960ea7",
            "ingress": [
              {
                "cidr_blocks": [
                  "72.137.76.221/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2_sg",
            "name_prefix": "",
            "owner_id": "231691540352",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec_sg"
            },
            "tags_all": {
              "Name": "ec_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0790f77bfd6b79642"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:231691540352:security-group/sg-09bda7ba357e7e183",
            "description": "security group of rds mysql",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09bda7ba357e7e183",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.78/32"
                ],
                "description": "MySQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_sg",
            "name_prefix": "",
            "owner_id": "231691540352",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds_sg"
            },
            "tags_all": {
              "Name": "rds_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0790f77bfd6b79642"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.terraform_ec2",
            "aws_key_pair.ec2_key",
            "aws_security_group.ec2_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.terraform_vpc",
            "tls_private_key.public_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:231691540352:subnet/subnet-0e3b17b9212047d9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3b17b9212047d9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "231691540352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_1_name"
            },
            "tags_all": {
              "Name": "private_subnet_1_name"
            },
            "vpc_id": "vpc-0790f77bfd6b79642"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:231691540352:subnet/subnet-09553a94ef9ced596",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09553a94ef9ced596",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "231691540352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_2_name"
            },
            "tags_all": {
              "Name": "private_subnet_2_name"
            },
            "vpc_id": "vpc-0790f77bfd6b79642"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:231691540352:subnet/subnet-0460d41e381cb6819",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0460d41e381cb6819",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "231691540352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_name_1"
            },
            "tags_all": {
              "Name": "public_subnet_name_1"
            },
            "vpc_id": "vpc-0790f77bfd6b79642"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:231691540352:subnet/subnet-0e6a73a3d0b8dbf60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6a73a3d0b8dbf60",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "231691540352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mytest_public_subnet_name_2"
            },
            "tags_all": {
              "Name": "mytest_public_subnet_name_2"
            },
            "vpc_id": "vpc-0790f77bfd6b79642"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:231691540352:vpc/vpc-0790f77bfd6b79642",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0549876b54a2736e3",
            "default_route_table_id": "rtb-0a25d1cae1bf46c2f",
            "default_security_group_id": "sg-06c45697bff79317c",
            "dhcp_options_id": "dopt-06e1c6bf115ce4533",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0790f77bfd6b79642",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a25d1cae1bf46c2f",
            "owner_id": "231691540352",
            "tags": {
              "Name": "terraform_vpc"
            },
            "tags_all": {
              "Name": "terraform_vpc"
            }
          }
        }
      ]
    }
  ]
}